# globals

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  compile.sh
.github/workflows/: doxygen.yml
cmake/: Config.cmake.in  Findtest-drive.cmake  jsonfortran.cmake  lapack_and_blas.cmake
doc/: Doxyfile
docs/: Doxyfile
examples/: CMakeLists.txt  test_kinddeclaration.f90
libsrcs/: 000modKindDeclaration.f90  00modGlobals.f90  01modNorms.f90  02modTiming.f90  03modScratch.f90  04modDataSequence.f90  04modScratch.f90  05modDataSequence.f90  05modTimeInputs.f90  06modTimeOutputs.f90  07modDmkOdeData.f90  07modTimeInputs.f90  08modGaussQuadrature.f90  08modTimeOutputs.f90  09modDmkOdeData.f90  10modGaussQuadrature.f90  CMakeLists.txt
srcs/: CMakeLists.txt  modDataSequence.f90  modGaussQuadrature.f90  modGlobals.f90  modJsonData.f90  modKindDeclaration.f90  modNorms.f90  modScratch.f90  modTimeInputs.f90  modTimeOutputs.f90  modTiming.f90
tests/: CMakeLists.txt  test_jsondata.f90  test_kinddeclaration.f90
tools/: CMakeLists.txt  lp_error.sh  td.sh
tools/axpy_timedata/: main.f90
tools/break_timedata/: main.f90
tools/data2timedata/: main.f90
tools/extention_timedata/: main.f90
tools/get_timedata/: main.f90
tools/get_timedata/get_data/: Makefile
tools/get_timedata/get_data/Rules_make/: Rules.make  Rules.make-gfortran  Rules.make-intel  Rules.make-xlf  dependencies
tools/get_timedata/get_data/scripts/old/: deps.py  find_deps  find_mod_names  mkdeps
tools/invert_timedata/: main.f90
tools/lp_norm_timedata/: main.f90
tools/multiply_timedata/: main.f90
tools/scale_timedata/: main.f90
tools/selection_timedata/: main.f90
tools/split_timedata/: main.f90
tools/vector2magnitude_timedata/: main.f90
