
set(BUILD_MOD_DIR ${CMAKE_CURRENT_BINARY_DIR}/mod)

file(GLOB F90SOURCES ${CMAKE_CURRENT_LIST_DIR}/*.f90)

set(GLOBALS_LIBRARY "globals" CACHE STRING "Library name" FORCE)
add_library(${GLOBALS_LIBRARY} ${F90SOURCES})
add_library(${PROJECT_NAME}::${GLOBALS_LIBRARY} ALIAS ${GLOBALS_LIBRARY})

set_target_properties(${GLOBALS_LIBRARY}
   PROPERTIES
      Fortran_MODULE_DIRECTORY ${BUILD_MOD_DIR}
)

target_include_directories(${GLOBALS_LIBRARY}
   INTERFACE
   $<BUILD_INTERFACE:${BUILD_MOD_DIR}>
   $<INSTALL_INTERFACE:mod>
   PRIVATE
   $<BUILD_INTERFACE:${JSONFORTRAN_MOD_DIR}>
)

target_link_libraries(${GLOBALS_LIBRARY}
   PRIVATE
   ${LAPACK_BLAS_LIBRARIES}
   ${JSONFORTRAN_LIBRARY}
   # $<BUILD_LOCAL_INTERFACE:${JSONFORTRAN_LIBRARY}>
)

include(GNUInstallDirs)

install(DIRECTORY ${BUILD_MOD_DIR}/
   DESTINATION mod
   COMPONENT library
   FILES_MATCHING PATTERN "*.mod"
)

install(TARGETS ${GLOBALS_LIBRARY}
   EXPORT ${PROJECT_NAME}-targets
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   COMPONENT library
)
